--- a/front-spa/src/components/layout.css
+++ b/front-spa/src/components/layout.css
@@ -3,11 +3,25 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
-body {
-  margin: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+
+#bg .gatsby-image-wrapper {
+  height: 100%;
 }
+
+a {
+  color: whitesmoke;
+  text-decoration: none;
+  padding-left: 1em;
+}
+footer {
+  font-size: 0.8em;
+}
+footer a {
+  color: #555555;
+  padding: 0;
+}
+
 article,
 aside,
 details,
@@ -199,7 +213,11 @@ html {
   box-sizing: inherit;
 }
 body {
-  color: hsla(0, 0%, 0%, 0.8);
+  overflow: hidden;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: hsla(0, 0%, 0%, 0.9);
   font-family: georgia, serif;
   font-weight: normal;
   word-wrap: break-word;
@@ -618,5 +636,8 @@ pre tt:after {
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
+  }
+  body {
+    background-color: #9fdee7;
   }
 }
